Improved install script and instructions